user login modifications

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,21 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.29.2</version>
+                <configuration>
+                    <changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
+                    <url>jdbc:mysql://localhost:3306/ticketing_system</url>
+                    <username>root</username>
+                    <password>Ev@123#tick</password>
+                    <driver>com.mysql.cj.jdbc.Driver</driver>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 
 </project>
