--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,14 @@ spring.application.name=Real-Time_Event_Ticketing_System
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketing_system
 spring.datasource.username=root
 spring.datasource.password=Ev@123#tick
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 server.servlet.context-path=/ticket-system
+
+
+
 
 
 # H2 Console
@@ -24,3 +27,5 @@ spring.security.user.password=admin
 # Logging
 logging.level.com.ticketing=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+
