user login modifications complex weired

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=admin
 spring.security.user.password=admin
 
+## Logging
+#logging.level.com.ticketing=DEBUG
+#logging.level.org.springframework.security=DEBUG
+
 # Logging
-logging.level.com.ticketing=DEBUG
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=INFO
+logging.level.com.ticketing=INFO
 
 
