completed login system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,7 @@ spring.security.user.password=admin
 logging.level.org.springframework.security=INFO
 logging.level.com.ticketing=INFO
 
+# Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
 
