--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,6 @@ server.servlet.context-path=/ticket-system
 
 
 
-
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -36,3 +35,10 @@ logging.level.com.ticketing=INFO
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
+# Config Vendor Credentials
+config.vendor.email=VendorUser@gmail.com
+config.vendor.password=vendor@user123
+
+# JWT Services
+jwt.secret=tLJ8HEaYsGmz/JtHeTvAd6qT8LhrGPKRqK2B65DNtoI=
+jwt.expiration=86400000
