--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,14 +31,9 @@ spring.security.user.password=admin
 logging.level.org.springframework.security=INFO
 logging.level.com.ticketing=INFO
 
-# Swagger
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui
-
 # Config Vendor Credentials
 config.vendor.email=VendorUser@gmail.com
 config.vendor.password=vendor@user123
 
-# JWT Services
-jwt.secret=tLJ8HEaYsGmz/JtHeTvAd6qT8LhrGPKRqK2B65DNtoI=
-jwt.expiration=86400000
+# Swagger Configuration
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
