--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,11 @@ logging.level.com.ticketing=INFO
 config.vendor.email=VendorUser@gmail.com
 config.vendor.password=vendor@user123
 
+# Server Configuration
+server.port=8080
+
 # Swagger Configuration
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
