Added swagger and do modifications for ticketService ,ticketServicePool , Ticket controller and config controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,5 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+
+# Swagger Link - http://localhost:8080/ticket-system/swagger-ui.html
