--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Real-Time_Event_Ticketing_System
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketing_system
 spring.datasource.username=root
 spring.datasource.password=Ev@123#tick
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
@@ -17,7 +17,7 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
 # JPA Configuration
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Security
 spring.security.user.name=admin
