--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,14 +2,11 @@ spring.application.name=Real-Time_Event_Ticketing_System
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketing_system
 spring.datasource.username=root
 spring.datasource.password=Ev@123#tick
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 server.servlet.context-path=/ticket-system
-
-
-
 
 # H2 Console
 spring.h2.console.enabled=true
